--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "chart.js": "^4.4.9",
     "firebase": "^11.3.0",
     "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1"
